<resources>
    <string name="app_name">Timetable HSE</string>
    <string name="Head">Timetable for HSE FE</string>
    <string name="tt_for_students">Расписание для студентов</string>
    <string name="tt_for_teacher">Расписание для преподавателя</string>
    <string name="logo">HSE logo</string>

    <string name="timetable_day_label">Расписание\nна день</string>
    <string name="timetable_week_label">Расписание\nна неделю</string>
    <string name="choose_group_label">Выберите группу:</string>
    <string name="choose_teacher_label">Выберите преподавателя:</string>
    <string name="now">Сейчас:</string>


    <string name="status">Нет пар</string>
    <string name="subject">Дисциплина</string>
    <string name="cabinet">Корпус</string>
    <string name="corp">Кабинет</string>
    <string name="teacher">Преподаватель</string>

    <string name="btnSettings">Настройки</string>
    <string name="settingsHintName">Укажите ваше имя</string>
    <string name="settingsLightLevelText">Текущая освещенность:</string>
    <string name="settingsPhotoText">Укажите фото:</string>
    <string name="settings_all_sensors">Все датчики:</string>
    <string name="btnSave">Сохранить</string>
    <string name="btnPhotoSelect">Сделать фото</string>
    <string name="saved_message">Сохранено</string>
    <string name="ask_photo_permits">Для снятия фото нужно предоставить права на фото</string>
    <string name="lux">%1$.2f lux</string>
    <string name="avatar">" avatar"</string>
    <string name="name">" name"</string>

    <string name="studentType">student</string>
    <string name="teacherType">teacher</string>
</resources>