<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        style="@style/HSE.Labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:paddingStart="20dp"
        android:text="@string/choose_teacher_label"

        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/groupList"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:paddingStart="20dp"

        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:paddingStart="20dp"
        android:text="@string/now"

        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:paddingStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/time"
        tools:layout_editor_absoluteX="20dp"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/cabinet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/corp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/button_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:lines="2"
            android:text="@string/timetable_day_label"
            android:textAlignment="center"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button_week"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:lines="2"
            android:text="@string/timetable_week_label"
            android:textAlignment="center" />
    </LinearLayout>


</LinearLayout>